--- a/pepeizqs deals web/Pages/Shared/_Layout.cshtml
+++ b/pepeizqs deals web/Pages/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
     <title>@titulo</title>
 
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/maestro.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/maestro.css" asp-append-version="true"/>
     <link rel="stylesheet" href="~/css/cabecera_cuerpo_pie.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/resto.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
@@ -86,7 +86,7 @@
                     </div>
                 </div>
 
-                <a class="texto-logo" asp-page="/Index">pepeizq's deals</a>
+                <a class="texto-logo" href="https://pepeizqdeals.com/">pepeizq's deals</a>
 
                 @*Resolucion pequeña*@
 @*                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
