--- a/pepeizqs deals web/Pages/Componentes/Secciones/Buscador.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Buscador.razor
@@ -53,8 +53,10 @@
 
     List<Juegos.Juego> juegos = new List<Juegos.Juego>();
 
-    private void TextoCambia(ChangeEventArgs texto)
-    {     
+    private async void TextoCambia(ChangeEventArgs texto)
+    {
+        await Task.Delay(50);
+
         if (texto.Value.ToString().Trim().Length > 1)
         {
             juegos = BaseDatos.Juegos.Buscar.Nombre(texto.Value.ToString().Trim(), true);
