--- a/pepeizqs deals web/Pages/Shared/_Layout.cshtml
+++ b/pepeizqs deals web/Pages/Shared/_Layout.cshtml
@@ -44,7 +44,7 @@
     <meta name="theme-color" content="#ffffff">
 
     <base href="~/" />
-    <component type="typeof(Juegos.Juego)" render-mode="Server" />
+    <component type="typeof(Juegos.Juego)" render-mode="ServerPrerendered" />
 
 </head>
 
