--- a/pepeizqs deals web/Pages/Shared/_LoginPartial.cshtml
+++ b/pepeizqs deals web/Pages/Shared/_LoginPartial.cshtml
@@ -18,9 +18,15 @@
             <div class="menu-dropdown">
                 <button class="texto-cabecera" style="margin: 0px; border: 0px; color: var(--colorTextoVisitado); line-height: 20px;">@await UsuarioCoger.Nickname(UserManager, User)</button>
                 <div class="menu-dropdown-contenido" style="right: 0;">
-                    <a class="texto-cabecera menu-dropdown-item" style="text-align: right;" asp-area="Identity" asp-page="/Account/Manage/Index">Steam</a>
-                    <a class="texto-cabecera menu-dropdown-item" style="text-align: right;" asp-area="Identity" asp-page="/Account/Manage/Email">Email</a>
-                    <a class="texto-cabecera menu-dropdown-item" style="text-align: right;" asp-area="Identity" asp-page="/Account/Manage/ChangePassword">Password</a>
+                    <a class="texto-cabecera menu-dropdown-item" style="text-align: right;" asp-area="Identity" asp-page="/Account/Manage/Index">
+                        @Herramientas.Idiomas.CogerCadena(idioma, "Layout.Steam")
+                    </a>
+                    <a class="texto-cabecera menu-dropdown-item" style="text-align: right;" asp-area="Identity" asp-page="/Account/Manage/Email">
+                        @Herramientas.Idiomas.CogerCadena(idioma, "Layout.Email")
+                    </a>
+                    <a class="texto-cabecera menu-dropdown-item" style="text-align: right;" asp-area="Identity" asp-page="/Account/Manage/ChangePassword">
+                        @Herramientas.Idiomas.CogerCadena(idioma, "Layout.Password")
+                    </a>
                     <a class="texto-cabecera menu-dropdown-item" style="text-align: right;" asp-area="Identity" asp-page="/Account/Manage/PersonalData">
                         @Herramientas.Idiomas.CogerCadena(idioma, "Layout.PersonalData")
                     </a>
