--- a/pepeizqs deals web/wwwroot/css/resto.css
+++ b/pepeizqs deals web/wwwroot/css/resto.css
@@ -49,7 +49,8 @@
     height: 1em;
     vertical-align: middle;
     margin-top: 0px;
-    margin-right: 2px;
+    margin-right: 3px;
+    margin-bottom: 4px;
     accent-color: var(--fondoEntrada);
     background-repeat: no-repeat;
     background-position: center;
