--- a/pepeizqs deals web/Pages/Componentes/Secciones/Minimos.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Minimos.razor
@@ -3,6 +3,7 @@
 @using Microsoft.AspNetCore.Components.Web;
 @using Microsoft.AspNetCore.Identity;
 @using Microsoft.Data.SqlClient;
+@using Microsoft.JSInterop;
 @using pepeizqs_deals_web.Areas.Identity.Data;
 
 @inject UserManager<Usuario> UserManager
@@ -10,22 +11,38 @@
 
 @if (juegosMostrar.Count > 0)
 {
+	<div style="display: flex; align-items: center; width: 100%;">
+		<div style="width: 80%; font-size: 23px; text-align: left;">
+			@Herramientas.Idiomas.CogerCadena(idioma, "HistoricalLow.String1")
+		</div>
+
+		<div style="width: 20%; font-size: 16px; text-align: right;">
+			@minimo.ToString()/@juegosConMinimos.Count.ToString()
+		</div>
+	</div>
+
+	<hr/>
+
 	<div style="position: fixed; z-index: 1; margin-top: -40px; width: 100%; left: 0;">
-		<button @onclick="ClickearAtras" class="boton-pequeño" style="width: 50px; font-size: 22px; text-align: center; margin: 40px; left: 0; position: fixed;"><i class="fa-solid fa-chevron-left" /></button>
+		@if (minimo >= 50)
+		{
+			<button @onclick="ClickearAtras" class="boton-pequeño" style="width: 50px; font-size: 22px; text-align: center; margin: 40px; left: 0; position: fixed;"><i class="fa-solid fa-chevron-left" /></button>
+		}
+
 		<button @onclick="ClickearAdelante" class="boton-pequeño" style="width: 50px; font-size: 22px; text-align: center; margin: 40px; right: 0; position: fixed;"><i class="fa-solid fa-chevron-right"></i></button>
 	</div>
 
-	<div class="perfil" style="padding: 15px 20px;">
+	<div class="perfil" id="caja" style="padding: 15px 20px;">
 		@foreach (var juego in juegosMostrar)
 		{
 			<div class="perfil-flexible-centrado" style="margin-top: 15px; margin-bottom: 15px;">
-				<a class="boton-pequeño" style="padding: 0px;" href="/game/@juego.Id" target="_blank">
+				<a class="boton-pequeño" style="padding: 0px;" href="/game/@juego.Id">
 					<div class="perfil-flexible-centrado">
-						<div style="width: 15%;">
+						<div style="width: 18%;">
 							<img src="@juego.Imagenes.Capsule_231x87" style="max-height: 100%; max-width: 100%;" />
 						</div>
 
-						<div style="width: 59%; padding: 4px 15px;">
+						<div style="width: 56%; padding: 4px 15px;">
 							<div>@juego.Nombre</div>
 
 							<div class="perfil-flexible-centrado" style="justify-content: left;">
@@ -34,11 +51,12 @@
 								@if (BaseDatos.Usuarios.Buscar.RolDios(UserManager.GetUserName(HttpContextAccessor.HttpContext!.User)) == true)
 								{
 									<div style="margin-left: 10px; margin-right: 10px;">@juego.Id</div>
+									<div style="margin-left: 10px; margin-right: 10px;">@int.Parse(juego.Analisis.Cantidad.Replace(",", null))</div>
 								}
 							</div>						
 						</div>
 
-						<div style="width: 10%; padding: 4px 30px 4px 0px; text-align: right;">
+						<div style="width: 10%; padding: 4px 25px 4px 0px; text-align: right;">
 							<img src="@CargarImagenTienda(juego)" style="max-width: 100%; max-height: 100%;" />
 						</div>
 
@@ -60,6 +78,12 @@
 
 	#nullable disable
 
+	[Parameter]
+	public string idioma { get; set; }
+
+	[Inject] 
+	IJSRuntime javascript { get; set; }
+
 	private List<Juego> juegosConMinimos = new List<Juego>();
 	private List<Juego> juegosMostrar = new List<Juego>();
 
@@ -73,16 +97,30 @@
 
 		juegosConMinimos = BaseDatos.Juegos.Precios.DevolverMinimos();
 
-		CargarJuegos(minimo, maximo);
+		if (juegosConMinimos != null)
+		{
+			if (juegosConMinimos.Count > 0)
+			{
+				juegosConMinimos.Sort(delegate (Juego j1, Juego j2)
+				{
+					int j1Analisis = int.Parse(j1.Analisis.Cantidad.Replace(",", null));
+					int j2Analisis = int.Parse(j2.Analisis.Cantidad.Replace(",", null));
+
+					return j2Analisis.CompareTo(j1Analisis);
+				});
+			}
+		}
+
+		CargarJuegos(minimo, maximo, false);
 	}
 
-	private void CargarJuegos(int minimo2, int maximo2)
+	private void CargarJuegos(int minimo2, int maximo2, bool volverArriba)
 	{
 		if (juegosConMinimos != null)
 		{
 			if (juegosConMinimos.Count > 0)
 			{
-				juegosMostrar.Clear();
+				juegosMostrar.Clear();	
 
 				for (int i = minimo2; i < maximo2; i += 1)
 				{
@@ -94,13 +132,13 @@
 
 	private void ClickearAdelante()
 	{
-		if (minimo + 50 < juegosConMinimos.Count && maximo + 50 < juegosConMinimos.Count)
+		if (minimo + 50 <= juegosConMinimos.Count && maximo + 50 <= juegosConMinimos.Count)
 		{
 			minimo = minimo + 50;
 			maximo = maximo + 50;
 		}
 
-		CargarJuegos(minimo, maximo);
+		CargarJuegos(minimo, maximo, true);
 	}
 
 	private void ClickearAtras()
@@ -111,7 +149,7 @@
 			maximo = maximo - 50;
 		}
 
-		CargarJuegos(minimo, maximo);
+		CargarJuegos(minimo, maximo, true);
 	}
 
 	private string CargarImagenDRM(Juego juego)
